[package]
name = "rcmd"
version = "0.1.0"
authors = ["zerosum0x0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "errhandlingapi", "memoryapi"] }

